new benchmarks with using japex and jprofiler